--- a/main/templates/game_over.html
+++ b/main/templates/game_over.html
@@ -49,7 +49,7 @@ soundListener.onInit = function() {
 	<img id="sad_bear" src="/media/images/sad_bear.png" alt="Lei seg" />
 	<div id="game_over">Spillet er over!</div>
 </div>
-<p id="line2">Du gikk tom for penger</p>
+<p id="line2">Du gikk tom for gullmynter</p>
 
 <p id="try_again" class="button_container"><span class="simple_button"><a href="/newgame/">Pr&oslash;v igjen!</a></span></p>
 
