--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -48,6 +48,11 @@
 	{% endif %}{% endif %}{% endif %}{% endif %}
 		border-top: none;
 	}
+
+	#num_points {
+		text-shadow: 1px 1px 5px #ff0;
+		font-size: 140%;
+	}
 	</style>
 
 	{% block head %}{% endblock %}
