enter press in question bug in IE

--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -19,7 +19,7 @@
 <div id="question_wrapper">
 <p id="question_text">{{ result.question.question}}</p>
 
-<form id="answer_form" action="" method="post">
+<form id="answer_form" action="" method="post" onsubmit="return false">
 	<input type="text" name="answer" autocomplete="off" />
 	<p class="button_container"><span class="start_button simple_button">Svar</span></p></p>
 </form>
